added header and baner dection

--- a/index.html
+++ b/index.html
@@ -4,14 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>influencer-gear-maint</title>
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/style.css"><script src="https://kit.fontawesome.com/f056a62cc9.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
-
+        <nav>
+            <h3>Influencer products</h3>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Products</a></li>
+                <li><a href="#">Sign up</a></li>
+                <li><a href="#">Log In</a></li>
+                <li><a href="#"><i class="fa-solid fa-magnifying-glass"></i></a></li>
+                <li><a href="#"><i class="fa-solid fa-cart-shopping"></i></a></li>
+            </ul>
+        </nav>
+        <div class="baner">
+            <div class="baner-div-1">
+                <h1 class="baner-heading">Start your Journey as 
+                    Influencer</h1>
+                <p class="baner-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus faucibus.</p>
+                <button class="baner-button primary-button">Preebook now <i class="fa-solid fa-arrow-right"></i></button>
+            </div>
+            <div class="baner-div-2">
+                <img src="images/main-camera.png" alt="#" class="banerimage">
+            </div>
+        </div>
     </header>
     <main>
-
+        
     </main>
     <footer>
 
